# 2DGameEngine

./: CMakeLists.txt  Enemy.cpp  Enemy.h  Engine.cpp  Engine.h  Logger.cpp  Logger.h  Player.cpp  Player.h  PrimitiveRenderer.cpp  PrimitiveRenderer.h  README.md  TileMap.cpp  TileMap.h  main.cpp
raylib/examples/shaders/: shaders_palette_switch.c
raylib/projects/VS2022/: raylib.sln
raylib/projects/VS2022/examples/: core_high_dpi.vcxproj  shapes_kaleidoscope.vcxproj
raylib/projects/VS2022/raylib/: raylib.vcxproj
